fix breathing exercise on mobile?

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -44,25 +44,26 @@ body.calm2 {
   text-align: right;
   font-size: 150px; 
   align-items: center;
+  margin: 30px;
 }
 
 .breath-right-h-left-p p{
   text-align: left;
   font-size: 70px;
-  margin: 40px;
+  margin: 10px;
 }
 
 
 .breath-left-h-right-p h2{
   text-align: left;
   font-size: 150px; 
-  margin: 10px;
+  margin: 30px;
 }
   
 .breath-left-h-right-p p{
   text-align: right;
   font-size: 70px;
-  margin: 40px;
+  margin: 10px;
 
 }
 
@@ -79,8 +80,6 @@ body.calm2 {
   flex-direction: column;
   align-items: center;
   text-align: center;
-  width: 100%;
-  flex-grow: 1;
 }
 
 .breath-container{
